# mathpresso

./: .gitignore  .travis.yml  BpcPackage.cmake  CHANGELOG.txt  CMakeLists.txt  CMakePresets.json  CxxProject.cmake  LICENSE.md  README.md  README.txt  configure-vs2022-x64.bat  configure-vs2022-x86.bat  configure.sh  cxxconfig.js
.github/workflows/: build-config.json  build.yml
src/mathpresso/: mathpresso.cpp  mathpresso.h  mathpresso_ast.cpp  mathpresso_ast_p.h  mathpresso_context.cpp  mathpresso_context_p.h  mathpresso_jit.cpp  mathpresso_jit_p.h  mathpresso_optimizer.cpp  mathpresso_optimizer_p.h  mathpresso_p.h  mathpresso_parser.cpp  mathpresso_parser_p.h  mathpresso_tokenizer.cpp  mathpresso_tokenizer_p.h  mathpresso_util.cpp  mathpresso_util_p.h  mpallocator.cpp  mpallocator_p.h  mpast.cpp  mpast_p.h  mpatomic_p.h  mpcompiler.cpp  mpcompiler_p.h  mpeval_p.h  mphash.cpp  mphash_p.h  mpoptimizer.cpp  mpoptimizer_p.h  mpparser.cpp  mpparser_p.h  mpstrtod_p.h  mptokenizer.cpp  mptokenizer_p.h
src/test/: mpeval.cpp  mptest.cpp  mptutorial.cpp
test/: mpeval.cpp  mptest.cpp  mptutorial.cpp
tools/: configure-mac-xcode.sh  configure-makefiles.sh  configure-ninja.sh  configure-unix-makefiles-dbg.sh  configure-unix-makefiles-rel.sh  configure-vs-x64.bat  configure-vs-x86.bat  configure-vs2019-x64.bat  configure-vs2019-x86.bat  configure-vs2022-x64.bat  configure-vs2022-x86.bat  configure-win-mingw-dbg.bat  configure-win-mingw-rel.bat  configure-win-vs2010-x64.bat  configure-win-vs2010-x86.bat  configure-win-vs2013-x64.bat  configure-win-vs2013-x86.bat  configure-win-vs2015-x64.bat  configure-win-vs2015-x86.bat  configure-xcode.sh
